# file_collaboration

./: .gitignore  DEPLOYMENT_SETUP.md  DOCKER_README.md  README.md  aws_config.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.production.example  nginx.conf  pg_hba.conf  postgres.conf  postgresql.conf  railway.json  s3_operations.py  test_db.sh
.github/workflows/: deploy.yml
backend/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  TESTING_README.md  create_test_user.py  init_database.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup-dev.sh  test_auth.py
backend/app/: crud.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 5566abc09711_create_tables.py  664488d3b0eb_init.py  add_document_conversion_fields.py  update_file_schema.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: files.py  login.py  users.py  websocket.py
backend/app/core/: config.py  security.py
backend/app/services/: document_converter.py  s3_service.py  websocket_manager.py
backend/scripts/: run.sh
frontend/: .dockerignore  .gitignore  .prettierrc  Dockerfile  Dockerfile.prod  NODE18_SETUP.md  QUILL_INTEGRATION.md  README.md  YJS_QUILL_INTEGRATION.md  collab.config.js  index.html  package-lock.json  package.json  setup-node18.sh  start-collab-simple.sh  start-collab.sh  test-collab.html  test-collaboration.md  test-props.html  test-room-connection.js  test-websocket.html  vite.config.js
frontend/public/: index.html
frontend/src/components/: FileUpload.vue  FileViewer.vue  QuillEditor.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js
frontend/src/views/: FileEditor.vue  Files.vue  Home.vue  Login.vue  Register.vue
